cmake_minimum_required(VERSION 3.27)
project(cppppse)

set(CMAKE_CXX_STANDARD 23)

add_executable(cppppse main.cpp

       # src/ch8/homework1.cpp
       # src/ch8/homework2.cpp
       # src/ch8/homework3.cpp
       # src/ch8/homework4.cpp
       # src/ch8/homework5.cpp
       # src/ch8/homework6.cpp
       # src/ch10/homework1.cpp
       # src/ch10/homework6.cpp
        src/ch15/异常.cpp
        # src/ch9/homework1.cpp)
)
